--- a/dotfiles/mac-2017-02-17-setup.md
+++ b/dotfiles/mac-2017-02-17-setup.md
@@ -1,1 +1,9 @@
-# mac setup
+# MacOS Setup
+
+## Editors
+- Do not show welcome screen
+- Shell alises in Atom & VS Code
+- Test atom . & code .
+
+
+/usr/local/bin
