--- a/dotfiles/mac-2017-02-17-setup.md
+++ b/dotfiles/mac-2017-02-17-setup.md
@@ -1,9 +1,23 @@
 # MacOS Setup
 
+- Updates
+- Config: Trackpad, Dock, Sound, Bluetooth
+- Safari -> Get Chrome
+- Finder preferences
+- Firefox, Docker
+- Bing Wallpaper
+- SizeUp, Bartender, Skitch
+
 ## Editors
 - Do not show welcome screen
 - Shell alises in Atom & VS Code
 - Test atom . & code .
 
+```
+cd /usr/local/bin
 
-/usr/local/bin
+apm -> /Applications/Atom.app/Contents/Resources/app/apm/node_modules/.bin/apm
+atom -> /Applications/Atom.app/Contents/Resources/app/atom.sh
+code -> /Applications/Visual Studio Code.app/Contents/Resources/app/bin/code
+
+```
