--- a/dotfiles/mac-2017-02-17-setup.md
+++ b/dotfiles/mac-2017-02-17-setup.md
@@ -1,5 +1,6 @@
 # MacOS Setup
 
+## General
 - Updates
 - Config: Trackpad, Dock, Sound, Bluetooth
 - Safari -> Get Chrome
@@ -8,7 +9,7 @@
 - Bing Wallpaper
 - SizeUp, Bartender, Skitch
 
-## Editors
+## Code
 - Do not show welcome screen
 - Shell alises in Atom & VS Code
 - Test atom . & code .
@@ -20,4 +21,23 @@ apm -> /Applications/Atom.app/Contents/Resources/app/apm/node_modules/.bin/apm
 atom -> /Applications/Atom.app/Contents/Resources/app/atom.sh
 code -> /Applications/Visual Studio Code.app/Contents/Resources/app/bin/code
 
+```
+
+- Git
+- Node
+
+```
+mkdir .local
+tar -xvf node.tar > ~/.local/node
+
+cd /usr/local/bin
+ln -s /Users/chyld/.local/node/bin/node node
+ln -s /Users/chyld/.local/node/bin/npm npm
+```
+
+- Hyper.js
+
+```
+vi ~/.hyper.js
+may need to run npm i in ~/.hyper_plugins manually
 ```
