--- a/dotfiles/mac-2017-02-17-setup.md
+++ b/dotfiles/mac-2017-02-17-setup.md
@@ -27,9 +27,7 @@ code -> /Applications/Visual Studio Code.app/Contents/Resources/app/bin/code
 - Node
 
 ```
-mkdir .local
-tar -xvf node.tar > ~/.local/node
-
+move to ~/.local/node
 cd /usr/local/bin
 ln -s /Users/chyld/.local/node/bin/node node
 ln -s /Users/chyld/.local/node/bin/npm npm
@@ -41,3 +39,21 @@ ln -s /Users/chyld/.local/node/bin/npm npm
 vi ~/.hyper.js
 may need to run npm i in ~/.hyper_plugins manually
 ```
+
+- Zsh (reboot after install, echo $SHELL to verify)
+- Go
+
+```
+move to ~/.local/go
+cd /usr/local/bin
+ln -s /Users/chyld/.local/go/bin/go go
+ln -s /Users/chyld/.local/go/bin/godoc godoc
+ln -s /Users/chyld/.local/go/bin/gofmt gofmt   
+```
+
+- Python
+
+```
+install anaconda v3 to ~/.local/anaconda3
+```
+
