--- a/dotfiles/mac-2017-02-17-setup.md
+++ b/dotfiles/mac-2017-02-17-setup.md
@@ -57,3 +57,6 @@ ln -s /Users/chyld/.local/go/bin/gofmt gofmt
 install anaconda v3 to ~/.local/anaconda3
 ```
 
+# Config
+- Fonts (~/Library/Fonts)
+- Dotfiles
