--- a/python/jupyter/templates/gold/master.ipynb
+++ b/python/jupyter/templates/gold/master.ipynb
@@ -1,40 +1,37 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Template"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import torch\n",
+    "\n",
+    "pd.set_option('precision', 2)\n",
+    "torch.set_printoptions(precision=2, sci_mode=False)\n",
+    "\n",
+    "%precision 2\n",
+    "%load_ext lab_black\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# code here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# more here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# and more"
+    "# Start"
    ]
   },
   {
