--- a/python/jupyter/templates/gold/master.ipynb
+++ b/python/jupyter/templates/gold/master.ipynb
@@ -16,15 +16,17 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
     "import torch\n",
     "\n",
-    "pd.set_option('precision', 2)\n",
+    "pd.set_option(\"precision\", 2)\n",
     "torch.set_printoptions(precision=2, sci_mode=False)\n",
     "\n",
     "%precision 2\n",
     "%load_ext lab_black\n",
     "%load_ext autoreload\n",
-    "%autoreload 2"
+    "%autoreload 2\n",
+    "%matplotlib inline"
    ]
   },
   {
