--- a/python/jupyter/templates/gold/master.ipynb
+++ b/python/jupyter/templates/gold/master.ipynb
@@ -15,6 +15,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import torch\n",
@@ -34,6 +35,15 @@
    "metadata": {},
    "source": [
     "# Start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# begin project ..."
    ]
   },
   {
