--- a/python/jupyter/templates/gold/master.ipynb
+++ b/python/jupyter/templates/gold/master.ipynb
@@ -18,6 +18,7 @@
     "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import tensorflow as tf\n",
     "import torch\n",
     "\n",
     "pd.set_option(\"precision\", 2)\n",
