--- a/python/jupyter/templates/gold/master.ipynb
+++ b/python/jupyter/templates/gold/master.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Template"
+    "# Master Template"
    ]
   },
   {
@@ -13,6 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# imports\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import xarray as xr\n",
@@ -21,13 +22,16 @@
     "import tensorflow as tf\n",
     "import torch\n",
     "\n",
+    "# set numeric precison\n",
     "pd.set_option(\"precision\", 2)\n",
     "torch.set_printoptions(precision=2, sci_mode=False)\n",
-    "\n",
     "%precision 2\n",
-    "%load_ext lab_black\n",
+    "\n",
+    "# enable reload of changed files\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
+    "\n",
+    "# plot inline\n",
     "%matplotlib inline"
    ]
   },
