added cell timing

--- a/templates/jupyter/master.ipynb
+++ b/templates/jupyter/master.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Master Template"
+    "# Master\n",
+    "---"
    ]
   },
   {
@@ -39,7 +40,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Start"
+    "# Cell Timing\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "for i in range(3):\n",
+    "    print(i, i ** 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Begin\n",
+    "---"
    ]
   },
   {
