--- a/templates/physics/physics.ipynb
+++ b/templates/physics/physics.ipynb
@@ -4,18 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Physics Template"
+    "# Physics"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from sympy import Symbol, integrate\n",
-    "from scipy.integrate import quad\n",
+    "import sympy as sym\n",
+    "from sympy import integrate, diff, Eq\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline"
@@ -25,119 +26,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Start"
+    "# Examples"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Symbols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(0.33333333333333337, 3.700743415417189e-15)"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "quad(lambda x: x ** 2, 0, 1)"
+    "# create symbols\n",
+    "a, b, c, x, y, z = sym.symbols('a, b, c, x, y, z')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Calculus"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle x$"
-      ],
-      "text/plain": [
-       "x"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x = Symbol('x');x "
+    "# create equation\n",
+    "eq1 = Eq(3*a**2 + 7*b**3, 10); eq1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle x^{2}$"
-      ],
-      "text/plain": [
-       "x**2"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "x**2"
+    "# integrate x-squared twice\n",
+    "integrate(integrate(x**2))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{x^{2}}{2}$"
-      ],
-      "text/plain": [
-       "x**2/2"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "integrate(x)"
+    "# definite integral of x-cubed between 2 and 4\n",
+    "integrate(x**3, (x, 2, 4))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \\frac{1}{3}$"
-      ],
-      "text/plain": [
-       "1/3"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "integrate(x**2, (x, 0, 1))"
+    "# differentiate x-squared twice\n",
+    "diff(diff(x**2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Algebra"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solving with sympy\n",
+    "system = [\n",
+    "    Eq(3*x + 4*y, 7),\n",
+    "    Eq(5*x + 6*y, 8)\n",
+    "]\n",
+    "sym.solve(system, [x, y])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solving with numpy - manually\n",
+    "X = np.array([\n",
+    "    [3, 4],\n",
+    "    [5, 6]\n",
+    "])\n",
+    "\n",
+    "y = np.array([7, 8])\n",
+    "\n",
+    "np.linalg.inv(X) @ y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solving with numpy - solve method\n",
+    "np.linalg.solve(X, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solving with numpy - least squares\n",
+    "soln, _, _, _ = np.linalg.lstsq(X, y, rcond=None); soln"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# solving with linear regression\n",
+    "model = LinearRegression(fit_intercept=False).fit(X, y)\n",
+    "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Start Project"
    ]
   },
   {
