--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -40,15 +40,18 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "# preprocessing\n",
+    "from sklearn.preprocessing import PolynomialFeatures, StandardScaler, MinMaxScaler\n",
+    "\n",
     "# model selection\n",
-    "from sklearn.model_selection import train_test_split, KFold, GridSearchCV\n",
+    "from sklearn.model_selection import train_test_split, KFold, GridSearchCV, cross_val_score\n",
     "\n",
     "# metrics\n",
     "from sklearn.metrics import r2_score, mean_squared_error, accuracy_score, precision_score, recall_score, f1_score\n",
     "\n",
     "# models\n",
     "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
-    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge, ElasticNet\n",
     "\n",
     "# enable reload of changed files\n",
     "%load_ext autoreload\n",
