--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -9,7 +9,7 @@
     {
      "data": {
       "text/plain": [
-       "'Date: February 02, 2022'"
+       "'Date: February 06, 2022'"
       ]
      },
      "execution_count": 1,
@@ -19,7 +19,7 @@
    ],
    "source": [
     "from datetime import date\n",
-    "'Date: ' + date.today().strftime(\"%B %m, %Y\")"
+    "'Date: ' + date.today().strftime(\"%B %d, %Y\")"
    ]
   },
   {
@@ -46,7 +46,7 @@
    ],
    "source": [
     "from IPython import display\n",
-    "display.Image(\"ds.jpg\", width=250)"
+    "display.Image(\"images/ds.jpg\", width=250)"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "source": [
     "### Plotting\n",
     "\n",
-    "Click [here](plotting.ipynb) to read the Plotting guide.\n",
+    "Click [here](docs/plotting.ipynb) to read the Plotting guide.\n",
     "\n",
     "- [Matplotlib Gallery](https://matplotlib.org/2.0.2/gallery.html)\n",
     "- [Seaborn Gallery](https://seaborn.pydata.org/examples/index.html)\n",
@@ -103,7 +103,7 @@
     "\n",
     "### LaTeX\n",
     "\n",
-    "Click [here](latex.pdf) to read the LaTeX guide.\n",
+    "Click [here](docs/latex.pdf) to read the LaTeX guide.\n",
     "\n",
     "Given : $\\pi = 3.14159$ and $e = 2.71828$\n",
     "\n",
