--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -37,6 +37,7 @@
     "# graphing\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "import plotly.express as px\n",
     "\n",
     "# preprocessing\n",
     "from sklearn.preprocessing import PolynomialFeatures, StandardScaler, MinMaxScaler\n",
@@ -49,7 +50,7 @@
     "\n",
     "# models\n",
     "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
-    "from sklearn.linear_model import LinearRegression, Lasso, Ridge, ElasticNet\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge, ElasticNet, LogisticRegression\n",
     "\n",
     "# enable reload of changed files\n",
     "%load_ext autoreload\n",
