--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -46,7 +46,7 @@
     "from sklearn.model_selection import train_test_split, KFold, GridSearchCV, cross_val_score\n",
     "\n",
     "from sklearn.metrics import (r2_score, mean_squared_error, accuracy_score, precision_score, recall_score,\n",
-    "                             f1_score, roc_auc_score, roc_curve, precision_recall_curve)\n",
+    "                             f1_score, roc_auc_score, roc_curve, precision_recall_curve, make_scorer)\n",
     "\n",
     "# models\n",
     "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
@@ -57,7 +57,12 @@
     "%autoreload 2\n",
     "\n",
     "# plot inline\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "# make it pretty\n",
+    "from rich import print as rprint\n",
+    "from rich import inspect\n",
+    "%load_ext rich"
    ]
   },
   {
@@ -107,19 +112,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "352a461b-dd5d-4d23-b794-84c3de565567",
+   "id": "5cb2d90c-42f7-4259-b354-d61a75f12c69",
    "metadata": {},
    "source": [
-    "# Data Science Notebook"
+    "### Rich Library\n",
+    "\n",
+    "https://rich.readthedocs.io/en/latest/index.html"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "296d420e-fb5b-455f-bf0b-1e2f84e03375",
+   "id": "41402269-1e2e-4255-911e-9f9f13b39d70",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rprint(\"Where there is a [bold cyan]will[/bold cyan] there [u]is[/u] a [i]way[/i].\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "528604d8-5913-40dd-a07c-7c60b72f5d5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self):\n",
+    "        self.a = range(2, 10)\n",
+    "        self.b = {1:2}\n",
+    "    def bark(self):\n",
+    "        pass\n",
+    "d = Dog(); d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "50a55e21-c2af-40f6-a20a-ffaf02712432",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inspect(d, methods=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "352a461b-dd5d-4d23-b794-84c3de565567",
+   "metadata": {},
+   "source": [
+    "# Data Science Notebook"
+   ]
   },
   {
    "cell_type": "code",
@@ -133,6 +176,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "14212988-1aa6-40cc-ace7-bb63f176d1e3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "901444ae-53b4-41fb-b321-1412a1dd5786",
    "metadata": {},
    "outputs": [],
    "source": []
