--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -71,22 +71,48 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a81498e1-ee62-4a40-ab09-dc18811883ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.rule(\"[bold italic]Plotting\", style=\"#ff33cc\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "2cebd071-bf92-4797-b140-b9f3b4302bea",
+   "id": "a9745a11-f9b5-423a-9b64-00674358ba88",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
-    "### Plotting\n",
-    "\n",
     "Click [here](docs/plotting.ipynb) to read the Plotting guide.\n",
     "\n",
     "- [Matplotlib Gallery](https://matplotlib.org/2.0.2/gallery.html)\n",
     "- [Seaborn Gallery](https://seaborn.pydata.org/examples/index.html)\n",
-    "- [Plotly Gallery](https://plotly.com/python/)\n",
-    "\n",
-    "### LaTeX\n",
-    "\n",
+    "- [Plotly Gallery](https://plotly.com/python/)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07117682-1654-421e-9f06-2e12636f6a11",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.rule(\"[bold italic]LaTeX\", style=\"#ff33cc\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43d83e09-e073-4e72-8679-25d8c5d4425a",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
     "Click [here](docs/latex.pdf) to read the LaTeX guide.\n",
     "\n",
     "Given : $\\pi = 3.14159$ and $e = 2.71828$\n",
@@ -94,15 +120,17 @@
     "$$\n",
     "f(x) = x^2\\\\\n",
     "g(x) = \\frac{1}{x}\n",
-    "$$\n"
+    "$$"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "73f6532c-6f40-492c-81a9-5fc3ddb352e7",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4de717aa-7610-4dad-946e-1001a914f839",
    "metadata": {},
+   "outputs": [],
    "source": [
-    "### Greek Alphabet"
+    "con.rule(\"[bold italic]Greek Alphabet\", style=\"#ff33cc\")"
    ]
   },
   {
@@ -116,12 +144,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a73f302-a302-4121-96c6-6a27a3968bd4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "con.rule(\"[bold italic]Rich Library\", style=\"#ff33cc\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "5cb2d90c-42f7-4259-b354-d61a75f12c69",
+   "id": "5dcda09e-40e5-4566-bd59-91199368a75c",
    "metadata": {},
    "source": [
-    "### Rich Library\n",
-    "\n",
     "https://rich.readthedocs.io/en/latest/index.html"
    ]
   },
