--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -47,13 +47,14 @@
     "\n",
     "# model selection\n",
     "from sklearn.model_selection import train_test_split, KFold, GridSearchCV, cross_val_score\n",
-    "\n",
     "from sklearn.metrics import (r2_score, mean_squared_error, accuracy_score, precision_score, recall_score,\n",
     "                             f1_score, roc_auc_score, roc_curve, precision_recall_curve, make_scorer)\n",
     "\n",
     "# models\n",
     "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
     "from sklearn.linear_model import LinearRegression, Lasso, Ridge, ElasticNet, LogisticRegression\n",
+    "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
     "\n",
     "# enable reload of changed files\n",
     "%load_ext autoreload\n",
