--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -55,6 +55,7 @@
     "from sklearn.linear_model import LinearRegression, Lasso, Ridge, ElasticNet, LogisticRegression\n",
     "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor\n",
     "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
+    "import xgboost\n",
     "\n",
     "# enable reload of changed files\n",
     "%load_ext autoreload\n",
