--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -1,25 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "843067a0-0265-423d-be21-645738285d5b",
+   "cell_type": "markdown",
+   "id": "7902e3ed-bcd1-42c8-9d1b-673daebb1ea2",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from datetime import date\n",
-    "'Date: ' + date.today().strftime(\"%B %d, %Y\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1bcfff04-bdd4-4ac9-b5a3-96d24c9809ee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython import display\n",
-    "display.Image(\"images/ds.jpg\", width=250)"
+    "# Starter Template"
    ]
   },
   {
@@ -70,6 +56,28 @@
     "con = Console()\n",
     "ins = partial(inspect, methods=True)\n",
     "%load_ext rich"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "843067a0-0265-423d-be21-645738285d5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from datetime import date\n",
+    "'Date: ' + date.today().strftime(\"%B %d, %Y\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bcfff04-bdd4-4ac9-b5a3-96d24c9809ee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython import display\n",
+    "display.Image(\"images/ds.jpg\", width=250)"
    ]
   },
   {
@@ -218,7 +226,7 @@
    "id": "352a461b-dd5d-4d23-b794-84c3de565567",
    "metadata": {},
    "source": [
-    "# Data Science Notebook"
+    "# The Notebook"
    ]
   },
   {
