--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -34,7 +34,8 @@
     "# model selection\n",
     "from sklearn.model_selection import train_test_split, KFold, GridSearchCV, cross_val_score\n",
     "from sklearn.metrics import (r2_score, mean_squared_error, accuracy_score, precision_score, recall_score,\n",
-    "                             f1_score, roc_auc_score, roc_curve, precision_recall_curve, make_scorer)\n",
+    "                             f1_score, roc_auc_score, roc_curve, precision_recall_curve, make_scorer,\n",
+    "                             confusion_matrix, multilabel_confusion_matrix, ConfusionMatrixDisplay)\n",
     "\n",
     "# models\n",
     "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
