--- a/templates/data-sci/docs/template.ipynb
+++ b/templates/data-sci/docs/template.ipynb
@@ -34,7 +34,8 @@
     "# model selection\n",
     "from sklearn.model_selection import train_test_split, KFold, GridSearchCV, cross_val_score\n",
     "from sklearn.metrics import (r2_score, mean_squared_error, accuracy_score, precision_score, recall_score,\n",
-    "                             f1_score, roc_auc_score, roc_curve, precision_recall_curve, make_scorer)\n",
+    "                             f1_score, roc_auc_score, roc_curve, precision_recall_curve, make_scorer,\n",
+    "                             confusion_matrix, multilabel_confusion_matrix, ConfusionMatrixDisplay)\n",
     "\n",
     "# models\n",
     "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
@@ -67,11 +68,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">'Date: February 19, 2022'</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">'Date: February 20, 2022'</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[32m'Date: February 19, 2022'\u001b[0m\n"
+       "\u001b[32m'Date: February 20, 2022'\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -287,7 +288,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[01:24:41] </span>logging inside fn                                                  <a href=\"file:///tmp/ipykernel_635082/2657028360.py\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">2657028360.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_635082/2657028360.py#3\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3</span></a>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[01:33:37] </span>logging inside fn                                                  <a href=\"file:///tmp/ipykernel_710799/2657028360.py\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">2657028360.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_710799/2657028360.py#3\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3</span></a>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span><span style=\"color: #000080; text-decoration-color: #000080\">╭─ </span><span style=\"color: #000080; text-decoration-color: #000080; font-style: italic\">locals</span><span style=\"color: #000080; text-decoration-color: #000080\"> ─╮</span>                                                       <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">               </span>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span><span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">a</span><span style=\"color: #800000; text-decoration-color: #800000\"> =</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span>    <span style=\"color: #000080; text-decoration-color: #000080\">│</span>                                                       <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">               </span>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span><span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">b</span><span style=\"color: #800000; text-decoration-color: #800000\"> =</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">4</span>    <span style=\"color: #000080; text-decoration-color: #000080\">│</span>                                                       <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">               </span>\n",
@@ -296,7 +297,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[2;36m[01:24:41]\u001b[0m\u001b[2;36m \u001b[0mlogging inside fn                                                  \u001b]8;id=278108;file:///tmp/ipykernel_635082/2657028360.py\u001b\\\u001b[2m2657028360.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=861571;file:///tmp/ipykernel_635082/2657028360.py#3\u001b\\\u001b[2m3\u001b[0m\u001b]8;;\u001b\\\n",
+       "\u001b[2;36m[01:33:37]\u001b[0m\u001b[2;36m \u001b[0mlogging inside fn                                                  \u001b]8;id=634888;file:///tmp/ipykernel_710799/2657028360.py\u001b\\\u001b[2m2657028360.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=17044;file:///tmp/ipykernel_710799/2657028360.py#3\u001b\\\u001b[2m3\u001b[0m\u001b]8;;\u001b\\\n",
        "\u001b[2;36m           \u001b[0m\u001b[34m╭─\u001b[0m\u001b[34m \u001b[0m\u001b[3;34mlocals\u001b[0m\u001b[34m \u001b[0m\u001b[34m─╮\u001b[0m                                                       \u001b[2m               \u001b[0m\n",
        "\u001b[2;36m           \u001b[0m\u001b[34m│\u001b[0m \u001b[3;33ma\u001b[0m\u001b[31m =\u001b[0m \u001b[1;36m3\u001b[0m    \u001b[34m│\u001b[0m                                                       \u001b[2m               \u001b[0m\n",
        "\u001b[2;36m           \u001b[0m\u001b[34m│\u001b[0m \u001b[3;33mb\u001b[0m\u001b[31m =\u001b[0m \u001b[1;36m4\u001b[0m    \u001b[34m│\u001b[0m                                                       \u001b[2m               \u001b[0m\n",
@@ -338,11 +339,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">__main__.Dog</span><span style=\"color: #000000; text-decoration-color: #000000\"> object at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0x7f422cbf5450</span><span style=\"font-weight: bold\">&gt;</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">__main__.Dog</span><span style=\"color: #000000; text-decoration-color: #000000\"> object at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0x7f36a0f84310</span><span style=\"font-weight: bold\">&gt;</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m<\u001b[0m\u001b[1;95m__main__.Dog\u001b[0m\u001b[39m object at \u001b[0m\u001b[1;36m0x7f422cbf5450\u001b[0m\u001b[1m>\u001b[0m\n"
+       "\u001b[1m<\u001b[0m\u001b[1;95m__main__.Dog\u001b[0m\u001b[39m object at \u001b[0m\u001b[1;36m0x7f36a0f84310\u001b[0m\u001b[1m>\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -370,7 +371,7 @@
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">╭────────── </span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">class</span><span style=\"color: #000000; text-decoration-color: #000000\"> </span><span style=\"color: #008000; text-decoration-color: #008000\">'__main__.Dog'</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">&gt;</span><span style=\"color: #000080; text-decoration-color: #000080\"> ───────────╮</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">╭─────────────────────────────────────────╮</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
-       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">__main__.Dog</span><span style=\"color: #000000; text-decoration-color: #000000\"> object at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0x7f422cbf5450</span><span style=\"font-weight: bold\">&gt;</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
+       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">__main__.Dog</span><span style=\"color: #000000; text-decoration-color: #000000\"> object at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0x7f36a0f84310</span><span style=\"font-weight: bold\">&gt;</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">╰─────────────────────────────────────────╯</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span>                                             <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span>    <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">a</span> = <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">range</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">10</span><span style=\"font-weight: bold\">)</span>                         <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
@@ -382,7 +383,7 @@
       "text/plain": [
        "\u001b[34m╭─\u001b[0m\u001b[34m───────── \u001b[0m\u001b[1;34m<\u001b[0m\u001b[1;95mclass\u001b[0m\u001b[39m \u001b[0m\u001b[32m'__main__.Dog'\u001b[0m\u001b[1;34m>\u001b[0m\u001b[34m ──────────\u001b[0m\u001b[34m─╮\u001b[0m\n",
        "\u001b[34m│\u001b[0m \u001b[32m╭─────────────────────────────────────────╮\u001b[0m \u001b[34m│\u001b[0m\n",
-       "\u001b[34m│\u001b[0m \u001b[32m│\u001b[0m \u001b[1m<\u001b[0m\u001b[1;95m__main__.Dog\u001b[0m\u001b[39m object at \u001b[0m\u001b[1;36m0x7f422cbf5450\u001b[0m\u001b[1m>\u001b[0m \u001b[32m│\u001b[0m \u001b[34m│\u001b[0m\n",
+       "\u001b[34m│\u001b[0m \u001b[32m│\u001b[0m \u001b[1m<\u001b[0m\u001b[1;95m__main__.Dog\u001b[0m\u001b[39m object at \u001b[0m\u001b[1;36m0x7f36a0f84310\u001b[0m\u001b[1m>\u001b[0m \u001b[32m│\u001b[0m \u001b[34m│\u001b[0m\n",
        "\u001b[34m│\u001b[0m \u001b[32m╰─────────────────────────────────────────╯\u001b[0m \u001b[34m│\u001b[0m\n",
        "\u001b[34m│\u001b[0m                                             \u001b[34m│\u001b[0m\n",
        "\u001b[34m│\u001b[0m    \u001b[3;33ma\u001b[0m = \u001b[1;35mrange\u001b[0m\u001b[1m(\u001b[0m\u001b[1;36m2\u001b[0m, \u001b[1;36m10\u001b[0m\u001b[1m)\u001b[0m                         \u001b[34m│\u001b[0m\n",
