--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -2,65 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7902e3ed-bcd1-42c8-9d1b-673daebb1ea2",
-   "metadata": {},
-   "source": [
-    "# Starter Template"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aa2e1159-4209-4c0f-bde0-6132680eff7c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# python\n",
-    "from functools import partial\n",
-    "\n",
-    "# basics\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import scipy.stats as stats\n",
-    "\n",
-    "# graphing\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import plotly.express as px\n",
-    "\n",
-    "# preprocessing\n",
-    "from sklearn.preprocessing import PolynomialFeatures, StandardScaler, MinMaxScaler\n",
-    "\n",
-    "# model selection\n",
-    "from sklearn.model_selection import train_test_split, KFold, GridSearchCV, cross_val_score\n",
-    "from sklearn.metrics import (r2_score, mean_squared_error, accuracy_score, precision_score, recall_score,\n",
-    "                             f1_score, roc_auc_score, roc_curve, precision_recall_curve, make_scorer,\n",
-    "                             confusion_matrix, multilabel_confusion_matrix, ConfusionMatrixDisplay)\n",
-    "\n",
-    "# models\n",
-    "from sklearn.neighbors import KNeighborsClassifier, KNeighborsRegressor\n",
-    "from sklearn.linear_model import LinearRegression, Lasso, Ridge, ElasticNet, LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor\n",
-    "from sklearn.ensemble import RandomForestClassifier, RandomForestRegressor\n",
-    "import xgboost\n",
-    "\n",
-    "# enable reload of changed files\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "# plot inline\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# make it pretty\n",
-    "from rich.console import Console\n",
-    "from rich import inspect\n",
-    "con = Console()\n",
-    "ins = partial(inspect, methods=True)\n",
-    "%load_ext rich"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "352a461b-dd5d-4d23-b794-84c3de565567",
    "metadata": {},
    "source": [
@@ -73,20 +14,15 @@
    "id": "571cce04-96cd-4d5d-9508-3584bb85ccfa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "%run common.ipy\n",
+    "con.rule(\"[bold italic]Notebook is Ready\", style=\"#ff33cc\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "901444ae-53b4-41fb-b321-1412a1dd5786",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a547e2e-e65f-45ab-a8f5-3bc5ccce55f3",
+   "id": "075df416-89ef-4034-989f-7434097fabbe",
    "metadata": {},
    "outputs": [],
    "source": []
