--- a/templates/data-sci/n1.ipynb
+++ b/templates/data-sci/n1.ipynb
@@ -1,30 +1,29 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "352a461b-dd5d-4d23-b794-84c3de565567",
-   "metadata": {},
-   "source": [
-    "# The Notebook"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "571cce04-96cd-4d5d-9508-3584bb85ccfa",
+   "id": "ae3ea445-28ca-4f8e-826a-07ad42c896b9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run common.ipy\n",
-    "%run n1.ipynb\n",
-    "%run n2.ipynb\n",
-    "con.rule(\"[bold italic]Notebook is Ready\", style=\"#ff33cc\")"
+    "%run common.ipy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e414b7a7-8f3f-4006-8c2e-c3a2afd2ed49",
+   "id": "c1df13ba-f867-4d9b-a5cc-8cf28e0af00e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = np.arange(15).reshape(3,-1); a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0ac2d19-c78f-483a-839e-d7bfad779a75",
    "metadata": {},
    "outputs": [],
    "source": []
