--- a/templates/data-sci/n2.ipynb
+++ b/templates/data-sci/n2.ipynb
@@ -1,30 +1,29 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "352a461b-dd5d-4d23-b794-84c3de565567",
-   "metadata": {},
-   "source": [
-    "# The Notebook"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "571cce04-96cd-4d5d-9508-3584bb85ccfa",
+   "id": "82cc43ed-c4e5-4bdc-98a4-501e3adc3e94",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run common.ipy\n",
-    "%run n1.ipynb\n",
-    "%run n2.ipynb\n",
-    "con.rule(\"[bold italic]Notebook is Ready\", style=\"#ff33cc\")"
+    "%run common.ipy"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e414b7a7-8f3f-4006-8c2e-c3a2afd2ed49",
+   "id": "2fabf56a-2de4-4c82-9906-dbfdd03b4016",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = np.arange(10).reshape(5,-1) ** 0.5; b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2333a621-c070-46ef-95f6-bb2d3cec78f1",
    "metadata": {},
    "outputs": [],
    "source": []
