--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -10,21 +10,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "571cce04-96cd-4d5d-9508-3584bb85ccfa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #ff33cc; text-decoration-color: #ff33cc\">───────────────────────────────────── </span><span style=\"font-weight: bold; font-style: italic\">Notebook is Ready</span><span style=\"color: #ff33cc; text-decoration-color: #ff33cc\"> ─────────────────────────────────────</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[38;2;255;51;204m───────────────────────────────────── \u001b[0m\u001b[1;3mNotebook is Ready\u001b[0m\u001b[38;2;255;51;204m ─────────────────────────────────────\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "%cd -q _files/code\n",
     "%run common.ipy\n",
     "%run n1.ipynb\n",
-    "%run n2.ipynb\n",
-    "con.rule(\"[bold italic]Notebook is Ready\", style=\"#ff33cc\")"
+    "%cd -q ../..\n",
+    "con.rule(f\"[bold italic]Notebook is Ready\", style=\"#ff33cc\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e414b7a7-8f3f-4006-8c2e-c3a2afd2ed49",
+   "id": "50b9f391-9a7d-4e76-bb2c-3270370fce29",
    "metadata": {},
    "outputs": [],
    "source": []
