--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -15,10 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd -q _files/code\n",
+    "%cd -q code\n",
     "%run common.ipy\n",
     "%run n1.ipynb\n",
-    "%cd -q ../..\n",
+    "%cd -q ..\n",
     "con.rule(f\"[bold italic]Notebook is Ready\", style=\"#ff33cc\")"
    ]
   },
