--- a/templates/data-sci/notebook.ipynb
+++ b/templates/data-sci/notebook.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cd -q code\n",
+    "%cd -q library\n",
     "%run common.ipy\n",
     "%run n1.ipynb\n",
     "%cd -q ..\n",
