--- a/templates/data-sci/docs/template.ipynb
+++ b/templates/data-sci/docs/template.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run ../code/common.ipy"
+    "%run ../library/common.ipy"
    ]
   },
   {
@@ -27,11 +27,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">'Date: February 26, 2022'</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #008000; text-decoration-color: #008000\">'Date: February 27, 2022'</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[32m'Date: February 26, 2022'\u001b[0m\n"
+       "\u001b[32m'Date: February 27, 2022'\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -247,7 +247,7 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[06:08:42] </span>logging inside fn                                                  <a href=\"file:///tmp/ipykernel_56972/2657028360.py\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">2657028360.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_56972/2657028360.py#3\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3</span></a>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[23:34:53] </span>logging inside fn                                                  <a href=\"file:///tmp/ipykernel_241650/2657028360.py\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">2657028360.py</span></a><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">:</span><a href=\"file:///tmp/ipykernel_241650/2657028360.py#3\"><span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">3</span></a>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span><span style=\"color: #000080; text-decoration-color: #000080\">╭─ </span><span style=\"color: #000080; text-decoration-color: #000080; font-style: italic\">locals</span><span style=\"color: #000080; text-decoration-color: #000080\"> ─╮</span>                                                       <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">               </span>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span><span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">a</span><span style=\"color: #800000; text-decoration-color: #800000\"> =</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">3</span>    <span style=\"color: #000080; text-decoration-color: #000080\">│</span>                                                       <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">               </span>\n",
        "<span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">           </span><span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">b</span><span style=\"color: #800000; text-decoration-color: #800000\"> =</span> <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">4</span>    <span style=\"color: #000080; text-decoration-color: #000080\">│</span>                                                       <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">               </span>\n",
@@ -256,7 +256,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[2;36m[06:08:42]\u001b[0m\u001b[2;36m \u001b[0mlogging inside fn                                                  \u001b]8;id=160806;file:///tmp/ipykernel_56972/2657028360.py\u001b\\\u001b[2m2657028360.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=899371;file:///tmp/ipykernel_56972/2657028360.py#3\u001b\\\u001b[2m3\u001b[0m\u001b]8;;\u001b\\\n",
+       "\u001b[2;36m[23:34:53]\u001b[0m\u001b[2;36m \u001b[0mlogging inside fn                                                  \u001b]8;id=943020;file:///tmp/ipykernel_241650/2657028360.py\u001b\\\u001b[2m2657028360.py\u001b[0m\u001b]8;;\u001b\\\u001b[2m:\u001b[0m\u001b]8;id=202357;file:///tmp/ipykernel_241650/2657028360.py#3\u001b\\\u001b[2m3\u001b[0m\u001b]8;;\u001b\\\n",
        "\u001b[2;36m           \u001b[0m\u001b[34m╭─\u001b[0m\u001b[34m \u001b[0m\u001b[3;34mlocals\u001b[0m\u001b[34m \u001b[0m\u001b[34m─╮\u001b[0m                                                       \u001b[2m               \u001b[0m\n",
        "\u001b[2;36m           \u001b[0m\u001b[34m│\u001b[0m \u001b[3;33ma\u001b[0m\u001b[31m =\u001b[0m \u001b[1;36m3\u001b[0m    \u001b[34m│\u001b[0m                                                       \u001b[2m               \u001b[0m\n",
        "\u001b[2;36m           \u001b[0m\u001b[34m│\u001b[0m \u001b[3;33mb\u001b[0m\u001b[31m =\u001b[0m \u001b[1;36m4\u001b[0m    \u001b[34m│\u001b[0m                                                       \u001b[2m               \u001b[0m\n",
@@ -298,11 +298,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">__main__.Dog</span><span style=\"color: #000000; text-decoration-color: #000000\"> object at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0x7f97a8f5dc90</span><span style=\"font-weight: bold\">&gt;</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">__main__.Dog</span><span style=\"color: #000000; text-decoration-color: #000000\"> object at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0x7f54be769000</span><span style=\"font-weight: bold\">&gt;</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m<\u001b[0m\u001b[1;95m__main__.Dog\u001b[0m\u001b[39m object at \u001b[0m\u001b[1;36m0x7f97a8f5dc90\u001b[0m\u001b[1m>\u001b[0m\n"
+       "\u001b[1m<\u001b[0m\u001b[1;95m__main__.Dog\u001b[0m\u001b[39m object at \u001b[0m\u001b[1;36m0x7f54be769000\u001b[0m\u001b[1m>\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -330,7 +330,7 @@
       "text/html": [
        "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #000080; text-decoration-color: #000080\">╭────────── </span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">class</span><span style=\"color: #000000; text-decoration-color: #000000\"> </span><span style=\"color: #008000; text-decoration-color: #008000\">'__main__.Dog'</span><span style=\"color: #000080; text-decoration-color: #000080; font-weight: bold\">&gt;</span><span style=\"color: #000080; text-decoration-color: #000080\"> ───────────╮</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">╭─────────────────────────────────────────╮</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
-       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">__main__.Dog</span><span style=\"color: #000000; text-decoration-color: #000000\"> object at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0x7f97a8f5dc90</span><span style=\"font-weight: bold\">&gt;</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
+       "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"font-weight: bold\">&lt;</span><span style=\"color: #ff00ff; text-decoration-color: #ff00ff; font-weight: bold\">__main__.Dog</span><span style=\"color: #000000; text-decoration-color: #000000\"> object at </span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">0x7f54be769000</span><span style=\"font-weight: bold\">&gt;</span> <span style=\"color: #008000; text-decoration-color: #008000\">│</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span> <span style=\"color: #008000; text-decoration-color: #008000\">╰─────────────────────────────────────────╯</span> <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span>                                             <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
        "<span style=\"color: #000080; text-decoration-color: #000080\">│</span>    <span style=\"color: #808000; text-decoration-color: #808000; font-style: italic\">a</span> = <span style=\"color: #800080; text-decoration-color: #800080; font-weight: bold\">range</span><span style=\"font-weight: bold\">(</span><span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">2</span>, <span style=\"color: #008080; text-decoration-color: #008080; font-weight: bold\">10</span><span style=\"font-weight: bold\">)</span>                         <span style=\"color: #000080; text-decoration-color: #000080\">│</span>\n",
@@ -342,7 +342,7 @@
       "text/plain": [
        "\u001b[34m╭─\u001b[0m\u001b[34m───────── \u001b[0m\u001b[1;34m<\u001b[0m\u001b[1;95mclass\u001b[0m\u001b[39m \u001b[0m\u001b[32m'__main__.Dog'\u001b[0m\u001b[1;34m>\u001b[0m\u001b[34m ──────────\u001b[0m\u001b[34m─╮\u001b[0m\n",
        "\u001b[34m│\u001b[0m \u001b[32m╭─────────────────────────────────────────╮\u001b[0m \u001b[34m│\u001b[0m\n",
-       "\u001b[34m│\u001b[0m \u001b[32m│\u001b[0m \u001b[1m<\u001b[0m\u001b[1;95m__main__.Dog\u001b[0m\u001b[39m object at \u001b[0m\u001b[1;36m0x7f97a8f5dc90\u001b[0m\u001b[1m>\u001b[0m \u001b[32m│\u001b[0m \u001b[34m│\u001b[0m\n",
+       "\u001b[34m│\u001b[0m \u001b[32m│\u001b[0m \u001b[1m<\u001b[0m\u001b[1;95m__main__.Dog\u001b[0m\u001b[39m object at \u001b[0m\u001b[1;36m0x7f54be769000\u001b[0m\u001b[1m>\u001b[0m \u001b[32m│\u001b[0m \u001b[34m│\u001b[0m\n",
        "\u001b[34m│\u001b[0m \u001b[32m╰─────────────────────────────────────────╯\u001b[0m \u001b[34m│\u001b[0m\n",
        "\u001b[34m│\u001b[0m                                             \u001b[34m│\u001b[0m\n",
        "\u001b[34m│\u001b[0m    \u001b[3;33ma\u001b[0m = \u001b[1;35mrange\u001b[0m\u001b[1m(\u001b[0m\u001b[1;36m2\u001b[0m, \u001b[1;36m10\u001b[0m\u001b[1m)\u001b[0m                         \u001b[34m│\u001b[0m\n",
@@ -362,6 +362,43 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "8c1346a9-11fc-4f22-ad8c-ffb23cbc0032",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #ff33cc; text-decoration-color: #ff33cc\">───────────────────────────────────── </span><span style=\"font-weight: bold; font-style: italic\">Capturing Output</span><span style=\"color: #ff33cc; text-decoration-color: #ff33cc\"> ──────────────────────────────────────</span>\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\u001b[38;2;255;51;204m───────────────────────────────────── \u001b[0m\u001b[1;3mCapturing Output\u001b[0m\u001b[38;2;255;51;204m ──────────────────────────────────────\u001b[0m\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "con.rule(\"[bold italic]Capturing Output\", style=\"#ff33cc\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "df7ddaa1-f61a-4b65-9381-a3775e5adf57",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "\n",
+    "import does.not from exist\n",
+    "3/0 # divide by zero!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "id": "5a547e2e-e65f-45ab-a8f5-3bc5ccce55f3",
    "metadata": {},
    "outputs": [
@@ -385,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "e1725f3c-2fe8-4723-81ee-147b53eb7a1d",
    "metadata": {},
    "outputs": [
@@ -436,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74547d49-1456-4c8d-9899-c87bdac138fc",
+   "id": "6ef43d53-f476-4f01-be5d-e5633673dc50",
    "metadata": {},
    "outputs": [],
    "source": []
