--- a/templates/physics.ipynb
+++ b/templates/physics.ipynb
@@ -2,70 +2,38 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "05cd750d-0e37-4117-820a-d3bf6fc7409c",
    "metadata": {},
    "source": [
-    "# Master\n",
-    "---"
+    "# Imports"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "4b861e7c-1ebd-4cd9-93eb-ecd161fa9230",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# imports\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import xarray as xr\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "import tensorflow as tf\n",
-    "import torch\n",
     "\n",
-    "# set numeric precison\n",
-    "pd.set_option(\"precision\", 2)\n",
-    "torch.set_printoptions(precision=2, sci_mode=False)\n",
-    "%precision 2\n",
-    "\n",
-    "# enable reload of changed files\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
-    "# plot inline\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "d247215a-792e-4eca-b72e-db1adb47939f",
    "metadata": {},
    "source": [
-    "# Cell Timing\n",
-    "---"
+    "# Physics"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%time\n",
-    "for i in range(3):\n",
-    "    print(i, i ** 2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Begin\n",
-    "---"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "id": "82f7934b-48fe-4854-9773-73c7d4c4bbe4",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -91,5 +59,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
